--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "test": "truffle test",
     "lint": "eslint ./",
     "prepare": "truffle compile && npm test && npm run lint && webpack-cli --config ./webpack.config.js",
-    "build": "npm install",
     "dev": "webpack-dev-server"
   },
   "author": "Douglas von Kohorn",
@@ -41,5 +40,10 @@
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "async": "2.6.1",
+    "ipfs": "0.31.7",
+    "ipld-bitcoin": "0.1.7"
   }
 }
